# virtual-fixtures

./: .TODO  .gitignore  .gitmodules  CMakeLists.txt  README.md  install_on_sybotG_ROS.bash  install_on_v3d.bash  install_on_v3d_ROS.bash  setup.bash.in
cmake-modules/: FindEigen3.cmake  FindProtobuf.cmake  FindRTAI.cmake
mechanism_manager/: CMakeLists.txt  package.xml
mechanism_manager/action/: MechanismManager.action
mechanism_manager/config/: cfg.yml
mechanism_manager/include/mechanism_manager/: mechanism_manager.h  mechanism_manager_autom.h  mechanism_manager_interface.h  mechanism_manager_server.h
mechanism_manager/models/: gmm_1.txt  shelf_1.txt  shelf_2.txt  shelf_3.txt  shelf_4.txt  v3d_2.txt  v3d_cutted_3.txt  v3d_no_cutted_3.txt  v3d_no_cutted_4.txt
mechanism_manager/models/gmm/: test2d_1.txt  test2d_2.txt  test3d  test_gmm
mechanism_manager/models/v3d/: v3d_1.txt  v3d_cutted_4.txt  v3d_no_cutted_1.txt
mechanism_manager/src/: mechanism_manager.cpp  mechanism_manager_autom.cpp  mechanism_manager_interface.cpp  mechanism_manager_server.cpp
mechanism_manager/srv/: MechanismManagerServices.srv
mechanism_manager/test/: test_mechanism_manager.cpp  test_realtime.cpp
toolbox/: CMakeLists.txt  package.xml
toolbox/include/toolbox/: debug.h  math.h  ros.h  toolbox.h  utilities.h
toolbox/include/toolbox/dtw/: dtw.h
toolbox/include/toolbox/filters/: filters.h
toolbox/src/toolbox/filters/: filters.cpp
vf_controller/: CMakeLists.txt  package.xml  vf_controller_plugins.xml
vf_controller/config/: vf_controller.yaml
vf_controller/include/vf_controller/: kinematics_base_controller.h  vf_controller.h
vf_controller/launch/: controller_spawner.launch
vf_controller/src/: kinematics_base_controller.cpp  vf_controller.cpp
vf_controller/test/: test_vf_controller.cpp  test_vf_controller.test
vf_docker/: Dockerfile  help.txt
vf_gmr/: CMakeLists.txt  EigenFileIO.cpp  package.xml
vf_gmr/include/vf_gmr/: EigenFileIO.hpp  FunctionApproximator.hpp  FunctionApproximatorGMR.hpp  MetaParameters.hpp  MetaParametersGMR.hpp  ModelParameters.hpp  ModelParametersGMR.hpp  Parameterizable.hpp
vf_gmr/src/: FunctionApproximator.cpp  FunctionApproximatorGMR.cpp  MetaParameters.cpp  MetaParametersGMR.cpp  ModelParameters.cpp  ModelParametersGMR.cpp  Parameterizable.cpp
vf_gui/: CMakeLists.txt  package.xml
vf_gui/forms/: main_window.ui  mainwindow.ui
vf_gui/include/: guides_model.h  main_window.h  mainwindow.h
vf_gui/launch/: vf_gui.launch
vf_gui/src/: guides_model.cpp  main.cpp  main_window.cpp  mainwindow.cpp
vf_toolbox/: CMakeLists.txt  package.xml
vf_toolbox/include/vf_toolbox/: math.h  ros.h  utilities.h  vf_toolbox.h
vf_toolbox/include/vf_toolbox/dtw/: dtw.h
vf_toolbox/include/vf_toolbox/filters/: filters.h
vf_toolbox/include/vf_toolbox/spline/: spline.h
virtual_fixtures/: CMakeLists.txt  package.xml
virtual_mechanism/: CMakeLists.txt  package.xml
virtual_mechanism/config/: cfg.yml
virtual_mechanism/include/virtual_mechanism/: virtual_mechanism.h  virtual_mechanism_autom.h  virtual_mechanism_dmp.h  virtual_mechanism_factory.h  virtual_mechanism_gmr.h  virtual_mechanism_interface.h  virtual_mechanism_line.h  virtual_mechanism_spline.h
virtual_mechanism/src/: virtual_mechanism.cpp  virtual_mechanism_autom.cpp  virtual_mechanism_dmp.cpp  virtual_mechanism_factory.cpp  virtual_mechanism_gmr.cpp  virtual_mechanism_line.cpp  virtual_mechanism_spline.cpp
virtual_mechanism/test/: test_virtual_mechanism.cpp  test_virtual_mechanism_dmp.cpp  test_virtual_mechanism_factory.cpp  test_virtual_mechanism_gmr.cpp  test_virtual_mechanism_line.cpp  test_virtual_mechanism_spline.cpp  test_virtual_mechanism_spline.model
