<?xml version="1.0"?>
<package>
  <name>mechanism_manager</name>
  <version>0.0.0</version>
  <description>Mechanism Manager</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>GPLv2</license>

  <url type="website">https://github.com/graiola/virtual-fixtures</url>

  <author email="gennaro.raiola@gmail.com">Gennaro Raiola</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>toolbox</build_depend>
  <build_depend>vf_gmr</build_depend>
  <build_depend>virtual_mechanism</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>toolbox</run_depend>
  <run_depend>vf_gmr</run_depend>
  <run_depend>virtual_mechanism</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
