<?xml version="1.0"?>
<package>
  <name>toolbox</name>
  <version>0.0.0</version>
  <description>The toolbox package</description>

  <maintainer email="gennaro.raiola(at)gmail.com">Gennaro Raiola</maintainer>

  <license>GPLv2</license>

  <url type="website">https://github.com/graiola/virtual-fixtures</url>

  <author email="gennaro.raiola(at)gmail.com">Gennaro Raiola</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>realtime_tools</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<cpp cflags="-I${prefix}/include"/>
  </export>
</package>
