<?xml version="1.0"?>
<package>
  <name>vf_gmr</name>
  <version>0.0.0</version>
  <description>GMR Library taken from https://github.com/stulp/dmpbbo</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>GPLv2</license>

  <url type="website">https://github.com/graiola/virtual-fixtures</url>

  <author email="gennaro.raiola@gmail.com">Gennaro Raiola</author>

  <buildtool_depend>catkin</buildtool_depend>
  

</package>
