<?xml version="1.0"?>
<package>
  <name>vf_gui</name>
  <version>0.0.0</version>
  <description>A cool graphic stuff package</description>

  <maintainer email="gennaro@todo.todo">gennaro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mechanism_manager</build_depend>
  <run_depend>mechanism_manager</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
